# GPUtils

./: CMakeLists.txt  CMakeUserPresets.json  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  main.cpp
source/CUDA-kernels/: add.cu
src/: CMakePresets.json  HACKING.md  README.md  vcpkg.json
test/: CMakeLists.txt
test/source/: GPUtils_test.cpp
